deployments/kustomization/bases/ingress.yaml
# Copyright (c) 2021 SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.
#
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: permission-manager
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: permission-manager
                port:
                  number: 4000
